[gd_scene load_steps=2 format=3 uid="uid://isd5tt1p5qrb"]

[ext_resource type="Script" path="res://betting_area.gd" id="1_tcbgj"]

[node name="BettingArea" type="Node2D"]
script = ExtResource("1_tcbgj")

[node name="Border" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -40.0
offset_right = 32.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.74902, 0.627451, 0.384314, 1)

[node name="Foreground" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -32.0
offset_right = 24.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.337255, 0.619608, 0.286275, 1)

[node name="Chips" type="Node2D" parent="."]
position = Vector2(0, 8)

[node name="GUI" type="Node2D" parent="."]
visible = false

[node name="PayoutButton" type="Button" parent="GUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -40.0
offset_right = -41.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "Payout
"

[node name="CollectButton" type="Button" parent="GUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 8.0
offset_right = -39.0
offset_bottom = 39.0
grow_horizontal = 0
text = "Collect"

[connection signal="pressed" from="GUI/PayoutButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="GUI/CollectButton" to="." method="_on_collect_button_pressed"]
